export class Comunidad {
  id: number;
  nombre: string;
  personas: number[];
  personasInactivas: number[];
}
