export class MedioContacto {
  id: number;
  tipo: string;
  valor: string;
  esPreferido: boolean;
}
